<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="value_in_kg_s">Value in Kg\'s</string>
    <string name="enter_the_number_in_kg">Enter the number in kg :</string>
    <string name="convert">Convert</string>
    <string name="value_in_grams">Value in Grams :</string>
    <string name="S">Value in KG</string>
</resources>